Fixed another side scrolling bug, fixed skills and tools icon alignment

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -65,7 +65,7 @@ h1, h2, h3, h4 {
 .project-img {
   background-repeat: no-repeat;
   min-height: calc(105vh - 56px);
-  width: 100vw;
+  width: 100%;
 }
 
 .default-img {
